// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`skills config get CLI reads the effective oo skill config value for a key 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"true
"
,
}
`;

exports[`skills config get CLI lists all known effective values when the key is omitted 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"allow-implicit-invocation=true
"
,
}
`;

exports[`skills config get CLI validates skills config get input 1`] = `
{
  "invalidKey": {
    "exitCode": 2,
    "stderr": 
"Invalid config key for skill oo: missing. Use allow-implicit-invocation.
"
,
    "stdout": "",
  },
  "invalidSkill": {
    "exitCode": 2,
    "stderr": 
"Unsupported skill: missing. Use oo.
"
,
    "stdout": "",
  },
}
`;
